@@ -574,7 +574,7 @@ bool KivioPage::isStencilSelected( KivioStencil *pStencil )
  * for stencils.  The first one it finds will be returned.
  * If none are found, it will return NULL.
  */
-KivioStencil *KivioPage::checkForStencil( KivioPoint *pPoint, int *collisionType, float threshhold )
+KivioStencil *KivioPage::checkForStencil( KivioPoint *pPoint, int *collisionType, float threshhold, bool selectedOnly )
 {
     KivioStencil *pStencil;
     int colType;
@@ -600,7 +600,7 @@ KivioStencil *KivioPage::checkForStencil( KivioPoint *pPoint, int *collisionType
     }
     */
 
-    pStencil = m_pCurLayer->checkForStencil( pPoint, &colType, threshhold );
+    pStencil = m_pCurLayer->checkForStencil( pPoint, &colType, threshhold, selectedOnly );
     if( pStencil )
     {
         *collisionType = colType;
