@@ -190,3 +190,4 @@
 (Dave Marotti)
 03/06/2001
     - All but the crop abilities of export page work
+    - Made the moving of already selected stencils a bit more 'user friendly.'
